Fix IE9 scrollbar suppression
- cannot use data-attr since this doesn't cause relayout immediately
 - need to track clientWidth, not offsetWidth to detect a scrollbar
since
that excludes the scrollbar (no idea why this worked before in other
browers...)

--- a/js-library/app/css/basic.scss
+++ b/js-library/app/css/basic.scss
@@ -5,12 +5,6 @@
 @import "comment_icon";
 @import "icon_buttons";
 
-html[data-factlink-suppress-scrolling] {
-  overflow: hidden !important;
-  width:auto;
-  max-width: none;
-}
-
 span.factlink {
   // elementary reset
   background: transparent !important;
